# rust-raytracer

./: .gitignore  .gitmodules  Cargo.toml  evaluator.rs  main.rs  parser.rs  tokenizer.rs
gml/: checked-cube.gml  cube.gml  features.gml  intersect.gml  spheres.gml  tower.gml  two-spheres.gml
src/: evaluator.rs  lib.rs  lights.rs  main.rs  parser.rs  primitives.rs  raytracer.rs  tokenizer.rs  transform.rs  vecmath.rs
src/rungml/: Cargo.toml
src/rungml/src/: main.rs
