[package]

name = "rust-raytracer"
version = "0.0.1"
authors = ["Par Bohrarper <par.bohrarper@gmail.com>"]

[lib]
name = "rust_raytracer"
path = "src/lib.rs"

[[bin]]
name = "rust-raytracer"
path = "src/main.rs"

[dependencies]
lazy_static = "1.1.0"
vecmath = "0.3.1"

[profile.release]
debug = true
